--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
         arguments: [],
-        dataUrl: "Build/Match-TESTING.data",
-        frameworkUrl: "Build/Match-TESTING.framework.js",
-        codeUrl: "Build/Match-TESTING.wasm",
+        dataUrl: "Build/Match-TESTING.data.gz",
+        frameworkUrl: "Build/Match-TESTING.framework.js.gz",
+        codeUrl: "Build/Match-TESTING.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Match 3-Fishan",
