--- a/index.html
+++ b/index.html
@@ -4,37 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity Web Player | Match 3-Fishan</title>
-    <style>
-      /* Style for loading text */
-      #loading-text {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 24px;
-        font-family: Arial, sans-serif;
-        color: white;
-      }
-      /* Hide canvas initially */
-      #unity-canvas {
-        display: none;
-      }
-    </style>
   </head>
-  <body style="text-align: center; padding: 0; border: 0; margin: 0; background: black;">
-    
-    <!-- Loading text -->
-    <div id="loading-text">Loading...</div>
-
-    <!-- Unity Canvas -->
-    <canvas id="unity-canvas" width="550" height="800" tabindex="-1" 
-      style="width: 550px; height: 800px; background: #231F20"></canvas>
-
-    <!-- Load Unity -->
+  <body style="text-align: center; padding: 0; border: 0; margin: 0;">
+    <canvas id="unity-canvas" width=550 height=800 tabindex="-1" style="width: 550px; height: 800px; background: #231F20"></canvas>
     <script src="Build/Match-TESTING.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile styling adjustments
+        // Mobile device style: fill the whole browser client area with the game canvas:
         var meta = document.createElement('meta');
         meta.name = 'viewport';
         meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
@@ -44,11 +20,9 @@
         canvas.style.width = "100%";
         canvas.style.height = "100%";
         canvas.style.position = "fixed";
+
         document.body.style.textAlign = "left";
       }
-
-      // Ensure game loads properly
-      document.getElementById("unity-canvas").style.display = "block"; // Show canvas
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
         arguments: [],
@@ -59,11 +33,8 @@
         companyName: "DefaultCompany",
         productName: "Match 3-Fishan",
         productVersion: "1.6.8",
-      }).then(() => {
-        document.getElementById("loading-text").style.display = "none"; // Hide loading text when Unity starts
-      }).catch((error) => {
-        console.error("Unity failed to load:", error);
-        document.getElementById("loading-text").innerText = "Failed to load the game. Check the console.";
+        // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
+        // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
       });
     </script>
   </body>
